--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   mobx: ^1.2.1+3
   flutter_mobx: ^1.1.0+2
   get_it: ^5.0.1
+  
 
 
 dev_dependencies:
@@ -30,6 +31,8 @@ dev_dependencies:
     sdk: flutter
   mobx_codegen: ^1.1.1+1
   build_runner: ^1.10.1
+  flutter_native_splash: ^0.1.9
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
