--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,21 +19,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  parse_server_sdk_flutter: ^2.0.0
-  mobx: ^1.2.1+3
+  parse_server_sdk_flutter: ^2.0.1
+  mobx: ^1.2.1+4
   flutter_mobx: ^1.1.0+2
   get_it: ^5.0.1
-  brasil_fields: ^0.4.0
-  image_picker: ^0.6.7+12
+  brasil_fields: ^0.6.0
+  image_picker: ^0.6.7+14
   image_cropper: ^1.3.1
   dio: ^3.0.10
-  
-
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mobx_codegen: ^1.1.1+1
+  mobx_codegen: ^1.1.2
   build_runner: ^1.10.1
   flutter_native_splash: ^0.1.9
 
