--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   image_cropper: ^1.3.1
   dio: ^3.0.10
   shared_preferences: ^0.5.12+4
+  path: ^1.7.0
 
 dev_dependencies:
   flutter_test:
