--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,6 +36,11 @@ android {
         disable 'InvalidPackage'
     }
 
+    compileOptions {                                                          
+    sourceCompatibility JavaVersion.VERSION_1_8 
+    targetCompatibility JavaVersion.VERSION_1_8
+    } 
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "br.com.raveolx.olx_project_parse"
@@ -43,6 +48,7 @@ android {
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -60,4 +66,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    
 }
