Exibição de anuncios feito

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,12 @@ dependencies:
   shared_preferences: ^0.5.12+4
   path: ^1.7.0
   font_awesome_flutter: ^8.11.0
+  cached_network_image: ^2.4.1
+  intl: ^0.16.1
+  flutter_localizations:
+    sdk: flutter
+
+
 
 dev_dependencies:
   flutter_test:
