--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   carousel_pro: ^1.0.0
   readmore: ^1.0.0
   url_launcher: ^5.7.10
+  flutter_open_whatsapp: ^0.1.2
 
 
 dev_dependencies:
