--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   url_launcher: ^5.7.10
   flutter_open_whatsapp: ^0.1.2
   toggle_switch: "^0.1.8"
+  fluttertoast: ^7.1.6
 
 
 dev_dependencies:
