--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_open_whatsapp: ^0.1.2
   toggle_switch: "^0.1.8"
   fluttertoast: ^7.1.6
+  data_connection_checker: ^0.3.4
 
 
 dev_dependencies:
